--- a/example/Makefile
+++ b/example/Makefile
@@ -1,6 +1,6 @@
 CC=gcc
 CFLAGS=-Wall -Wextra -I../inc -O3
-LDFLAGS=
+LDFLAGS= -lwiringPi
 SOURCES=$(wildcard ../src/*.c)
 OBJECTS=$(notdir $(SOURCES:.c=.o))
 HEADERS=$(wildcard ../inc/*.h)
@@ -12,7 +12,7 @@ OUTPUT_DIR=out
 all: $(EXECUTABLES:%=$(OUTPUT_DIR)/%)
 
 $(OUTPUT_DIR)/%.out: $(addprefix $(OUTPUT_DIR)/, $(OBJECTS)) $(OUTPUT_DIR)/%.o
-	$(CC) $(LDFLAGS) $(addprefix $(OUTPUT_DIR)/, $(OBJECTS)) $(OUTPUT_DIR)/$*.o -o $@
+	$(CC) $(addprefix $(OUTPUT_DIR)/, $(OBJECTS)) $(OUTPUT_DIR)/$*.o -o $@ $(LDFLAGS)
 
 $(OUTPUT_DIR)/%.o: %.c | $(OUTPUT_DIR)
 	$(CC) $(CFLAGS) -c $< -o $@
@@ -25,7 +25,7 @@ $(OUTPUT_DIR):
 
 .PHONY: clean
 clean:
-	if exist $(OUTPUT_DIR) rmdir /S /Q $(OUTPUT_DIR)
+	rm -rf $(OUTPUT_DIR)
 
 .PHONY: format
 format:
