--- a/example/Makefile
+++ b/example/Makefile
@@ -1,6 +1,6 @@
 CC=gcc
 CFLAGS=-Wall -Wextra -I../inc -O3
-LDFLAGS= -lwiringPi -lpaho-mqtt3cs
+LDFLAGS= -lwiringPi -lpaho-mqtt3cs -lhiredis
 SOURCES=$(wildcard ../src/*.c)
 OBJECTS=$(notdir $(SOURCES:.c=.o))
 HEADERS=$(wildcard ../inc/*.h)
